dev/test_programs/INVALID/group12/scan_parse_errors/nested_comment_error.go
// nested block comments

package main

/* Block comments do not nest /* The star-slash on the right ends the while comment */ This is an error */


func main() {
	print()
}